# BackupCamera

./: .#CMakeLists.txt  .gitignore  .travis.yml  BackupCamera  BackupCameraProto.pro  CMakeLists.txt  Makefile  README.adoc  StartBackupCamera.sh  backupcameraqt.files  backupcameraqt.includes  format.sh  main.cpp  main.qml
Installer/: AutoBootSetup.sh  MainInstaller.sh
backupcameradriver/: backupcameradriver.pro
build-BackupCamera-Desktop-Debug/: Makefile
build-backupcameradriver-Desktop-Debug/: Makefile  backupcameradriver
src/: BackupCamera.cpp  BackupCamera.h  BackupCamera.pro  CMakeLists.txt  GraphicsHandler.cpp  GraphicsHandler.h  I_displayable.h  ThreadClass.hpp  VideoStream.cpp  VideoStream.hpp  backup_camera.cpp  backup_camera.h  backupcameradriver.pro  graphics_handler.cpp  graphics_handler.h  main.cpp  main_namespace.h  threadClass.hpp  videoStream.cpp  videoStream.h  videoStream.hpp
